# slither-dataflow

./: .gitignore  README.md  TokenVault.sol  pyproject.toml  taint_analysis.py  token_flow_analysis.py
slither_dataflow/: __init__.py  analyzer.py  cli.py
slither_dataflow/analyzers/: __init__.py  taint.py  token_flow.py
slither_dataflow/utils/: __init__.py  helpers.py
tests/contracts/: Vault.sol
